# reverse-engineering-dungeon-siege

./: CMakeLists.txt  README.md  premake4.lua
misc/: asp-sno-file-formats.txt  other-formats.txt  raw-file-format.txt  tank-file-format.txt
source/siege/: asp_importer.cpp  asp_model.cpp  asp_model.hpp  common.cpp  common.hpp  helper_types.cpp  helper_types.hpp  raw_image.cpp  raw_image.hpp  siege.hpp  sno_importer.cpp  sno_model.cpp  sno_model.hpp  tank_file.cpp  tank_file.hpp  tank_file_reader.cpp
source/tools/asp2obj/: asp2obj.cpp
source/tools/raw2x/: raw2png.cpp  raw2tga.cpp  raw2x_base.cpp  raw2x_base.hpp
source/tools/sno2obj/: sno2obj.cpp
source/tools/tankdump/: tankdump.cpp
source/tools/tga2raw/: tga2raw.cpp
source/utils/: common.cpp  common.hpp  compression.cpp  compression.hpp  filesys.cpp  filesys.hpp  simple_cmdline_parser.cpp  simple_cmdline_parser.hpp  utils.hpp  vectors.hpp
